--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
