--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.11",
-    "zustand": "^4.3.8"
+    "zustand": "^4.3.8",
+    "lottie-react-native": "5.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
