--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "expo": "~48.0.18",
     "expo-constants": "~14.2.1",
-    "expo-image": "~1.0.1",
+    "expo-image": "~1.0.2",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.5.3",
     "expo-status-bar": "~1.4.4",
     "lottie-react-native": "5.1.4",
+    "metro-core": "^0.79.1",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.13",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-responsive-fontsize": "^0.5.1",
@@ -33,6 +34,7 @@
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.2.1",
+    "metro-config": "^0.79.1",
     "typescript": "^4.9.4"
   },
   "overrides": {
